--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps2"></activity>
+        <activity android:name=".EditProfile"/>
         <activity android:name=".Login" />
         <activity android:name=".Register">
             <intent-filter>
