--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:18.0.0"
     implementation 'gun0912.ted:tedpermission:2.1.0'
     implementation "com.google.android.gms:play-services-location:18.0.0"
+    implementation 'androidx.recyclerview:recyclerview:1.2.0' // 최신 recyclerview 모듈
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
