--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.firebase:firebase-core:17.2.3'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation "com.google.android.gms:play-services-location:18.0.0"
     implementation 'gun0912.ted:tedpermission:2.1.0'
     implementation "com.google.android.gms:play-services-location:18.0.0"
+    implementation 'com.google.firebase:firebase-database:20.0.0'
 
 
     testImplementation 'junit:junit:4.+'
